--- a/index.html
+++ b/index.html
@@ -237,35 +237,39 @@
             <br>
         </div>
     </div>
-    <div class="container-fluid " id="section-system">
+    <div class="container-fluid" id="section-system">
         <div class="container bg-bluesky my-5 text-white shadow-lg">
             <div class="row py-5">
                 <div class="col text-center">
-                    <p class=" h2">System</p>
+                    <h1>System</h1>
                 </div>
             </div>
             <div class="row py-5 bg-whiteman text-black-50">
-                <div class="col-md-6 col-sm-6 shadow-sm text-center border">
+                <div class="col-md-6 col-sm-6 shadow-sm text-center ">
                     <div class="mb-4">
-                        <h1>Step by Step</h1>
+                        <h1 class="text-primary">Step by Step</h1>
                     </div>
                     <div class="py-auto">
-                        <ul class="navbar-nav size-font  ">
+                        <ul class="navbar-nav size-font">
                             <li class="nav-item ">
                                 <a class="nav-link " href="#collapseExample"  data-toggle="collapse"role="button" aria-expanded="false" aria-controls="collapseExample">
-                                    <i class="fab fa-autoprefixer bg-bluesky py-2 px-2 rounded-circle"></i>
+                                    <i class="fab fa-autoprefixer icon-system bg-bluesky py-2 px-2 rounded-circle"></i>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link " href="#warning"  data-toggle="collapse"role="button" aria-expanded="false" aria-controls="warning">
-                                    <i class="fas fa-exclamation bg-bluesky"></i>
+                                    <i class="fas fa-exclamation bg-bluesky icon-system  py-2 px-2 rounded-pill"></i>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#mail" data-toggle="collapse"role="button" aria-expanded="false" aria-controls="mail"><i class="fas fa-cloud"></i></a>
+                                <a class="nav-link" href="#mail" data-toggle="collapse"role="button" aria-expanded="false" aria-controls="mail">
+                                    <i class="fas fa-cloud bg-bluesky icon-system py-3 px-3 rounded-circle"></i>
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#security" data-toggle="collapse"role="button" aria-expanded="false" aria-controls="mail"><i class="fas fa-user-shield"></i></a>
+                                <a class="nav-link" href="#security" data-toggle="collapse"role="button" aria-expanded="false" aria-controls="mail">
+                                    <i class="fas fa-user-shield bg-bluesky icon-system  py-3 px-3 rounded-circle"></i>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -273,28 +277,29 @@
                 <div class="col-md-6 col-sm-6 px-2">
                     <div class="collapse" id="collapseExample">
                         <div class="card card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
                         </div>
                     </div>
                     <div class="collapse" id="warning">
                         <div class="card card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatem quibusdam ipsam rerum et suscipit praesentium aspernatur at, enim distinctio eaque quas est laborum repellat non dolore odit nemo iusto sunt accusantium nisi sint quaerat placeat? Praesentium laudantium dignissimos ab delectus unde, iusto aliquid voluptatem error placeat asperiores suscipit tempore ex cupiditate necessitatibus, accusamus nobis, consectetur sed molestiae id ipsam voluptatibus sapiente a commodi quibusdam. Illum, commodi cumque voluptate quidem quae numquam earum magni doloremque debitis quo, voluptates quia corrupti. Consequatur, natus! Doloremque earum commodi quae, sit quis laborum nesciunt vitae nostrum iste repellat ipsam pariatur? Molestiae impedit expedita explicabo.
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatem quibusdam ipsam rerum et suscipit praesentium aspernatur at, enim distinctio eaque quas est laborum repellat non dolore odit nemo iusto sunt accusantium nisi sint quaerat placeat? Praesentium laudantium dignissimos ab delectus unde, iusto aliquid voluptatem error placeat asperiores suscipit tempore ex cupiditate necessitatibus, accusamus nobis, consectetur sed molestiae id ipsam voluptatibus sapiente a commodi quibusdam. Illum, commodi cumque voluptate quidem quae numquam earum magni doloremque debitis quo, voluptates quia corrupti. Consequatur, natus! Doloremque earum commodi quae, sit quis laborum nesciunt vitae nostrum iste repellat ipsam pariatur? Molestiae impedit expedita explicabo.</p> 
                         </div>
                     </div>
                     <div class="collapse" id="mail">
                         <div class="card card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatem quibusdam ipsam rerum et suscipit praesentium aspernatur at, enim distinctio eaque quas est laborum repellat non dolore odit nemo iusto sunt accusantium nisi sint quaerat placeat? Praesentium laudantium dignissimos ab delectus unde, iusto aliquid voluptatem error placeat asperiores suscipit tempore ex cupiditate necessitatibus, accusamus nobis, consectetur sed molestiae id ipsam voluptatibus sapiente a commodi quibusdam. Illum, commodi cumque voluptate quidem quae numquam earum magni doloremque debitis quo, voluptates quia corrupti. Consequatur, natus! Doloremque earum commodi quae, sit quis laborum nesciunt vitae nostrum iste repellat ipsam pariatur? Molestiae impedit expedita explicabo.
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatem quibusdam ipsam rerum et suscipit praesentium aspernatur at, enim distinctio eaque quas est laborum repellat non dolore odit nemo iusto sunt accusantium nisi sint quaerat placeat? Praesentium laudantium dignissimos ab delectus unde, iusto aliquid voluptatem error placeat asperiores suscipit tempore ex cupiditate necessitatibus, accusamus nobis, consectetur sed molestiae id ipsam voluptatibus sapiente a commodi quibusdam. Illum, commodi cumque voluptate quidem quae numquam earum magni doloremque debitis quo, voluptates quia corrupti. Consequatur, natus! Doloremque earum commodi quae, sit quis laborum nesciunt vitae nostrum iste repellat ipsam pariatur? Molestiae impedit expedita explicabo.</p> 
                         </div>
                     </div>
                     <div class="collapse" id="security">
                         <div class="card card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatem quibusdam ipsam rerum et suscipit praesentium aspernatur at, enim distinctio eaque quas est laborum repellat non dolore odit nemo iusto sunt accusantium nisi sint quaerat placeat? Praesentium laudantium dignissimos ab delectus unde, iusto aliquid voluptatem error placeat asperiores suscipit tempore ex cupiditate necessitatibus, accusamus nobis, consectetur sed molestiae id ipsam voluptatibus sapiente a commodi quibusdam. Illum, commodi cumque voluptate quidem quae numquam earum magni doloremque debitis quo, voluptates quia corrupti. Consequatur, natus! Doloremque earum commodi quae, sit quis laborum nesciunt vitae nostrum iste repellat ipsam pariatur? Molestiae impedit expedita explicabo.
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatem quibusdam ipsam rerum et suscipit praesentium aspernatur at, enim distinctio eaque quas est laborum repellat non dolore odit nemo iusto sunt accusantium nisi sint quaerat placeat? Praesentium laudantium dignissimos ab delectus unde, iusto aliquid voluptatem error placeat asperiores suscipit tempore ex cupiditate necessitatibus, accusamus nobis, consectetur sed molestiae id ipsam voluptatibus sapiente a commodi quibusdam. Illum, commodi cumque voluptate quidem quae numquam earum magni doloremque debitis quo, voluptates quia corrupti. Consequatur, natus! Doloremque earum commodi quae, sit quis laborum nesciunt vitae nostrum iste repellat ipsam pariatur? Molestiae impedit expedita explicabo.</p>
                         </div>
                     </div>
                 </div>
             </div>  
         </div>
     </div>
+    
     <div class="jumbotron text-center" id="jumbotron-bottom">
         <div class="container">
             <!--<h1>Lets Join Us</h1>
