--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                     <div class="card h-100 bg-whitefor shadow mb-5">
                         <img src="assets/img/produk3.png" class="card-img-top img-card" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center text-uppercase bg-bluesky w-100 py-2 rounded">Smart Home</h5>
+                            <h5 class="card-title text-center text-uppercase bg-bluesky w-100 py-2 rounded">Special Porduct</h5>
                             <p class="card-text text-left">Lindir can make your family everyday feel happy. Lindir make you home be smarthome. AI support to be autonomus home. Make the happy stories</p>
                             <p class="card-text text-left">We have more device support by google and amazon. All device from your home can your configure from your smarthpone. Always easy to configure</p>
-                            <a class="btn btn-primary mt-4 w-50 rounded-pill" href="produk/smart.html">More</a>
+                            <a class="btn btn-primary mt-4 w-50 rounded-pill" href="produk/special.html">More</a>
                         </div>
                     </div>
                 </div>
