--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button> <!--pengatur toggle nya-->
             <div class="collapse navbar-collapse mt-2 " id="navbarNav">
-                <form class="form-inline my-2 my-lg-0 ml-md-5">
-                    <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search">
+                <ul class="navbar-nav mx-auto">
+                    <form class="form-row flex-nowrap my-2 my-lg-0">
+                        <div class="col-sm-8 col-md-9 col-lg-10">
+                            <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search" />
+                        </div>
+                        <div class="col-auto">
                             <button class="btn rounded-circle my-2 my-sm-0" type="submit">
                                 <i class="fas fa-search text-black-50"></i>
                             </button>
-                </form>
-                <ul class="navbar-nav mx-auto">
+                        </div>
+                    </form>
                     <li class="nav-item mx-2 active">
                         <a class="nav-link link  text-primary active" href="index.html">Home </a>
                     </li>
