--- a/produk/home.html
+++ b/produk/home.html
@@ -74,9 +74,9 @@
 
     <div class="container mt-2">
         <div class="row d-flex justify-content-center text-center mx-auto text-uppercase ">
-                <a class=" btn btn-outline-secondary  mx-2" href="#"><i class="fas fa-user-secret"></i><br>self</a>
-                    <a class="btn btn-outline-secondary active mx-2" href="home.html"><i class="fas fa-user-secret"></i><br>Home</a>
-                    <a class="btn btn-outline-secondary mx-2" href="smart.html"><i class="fas fa-user-secret"></i><br>Special</a>
+                <a class=" btn btn-outline-secondary  mx-2" href="self.html"><i class="fas fa-user-secret"></i><br>self</a>
+                    <a class="btn btn-outline-secondary active mx-2" href="#"><i class="fas fa-user-secret"></i><br>Home</a>
+                    <a class="btn btn-outline-secondary mx-2" href="special.html"><i class="fas fa-user-secret"></i><br>Special</a>
         </div> 
     </div>
     <div class="container banner my-3">
