--- a/produk/special.html
+++ b/produk/special.html
@@ -8,7 +8,6 @@
     <link href="../assets/css/produk.css" rel="stylesheet">
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://kit.fontawesome.com/c7aacba508.js" crossorigin="anonymous"></script>
 </head>
 <body data-spy="scroll">
@@ -74,9 +73,9 @@
 
     <div class="container mt-2">
         <div class="row d-flex justify-content-center text-center mx-auto text-uppercase ">
-                <a class=" btn btn-outline-secondary  mx-2" href="#"><i class="fas fa-user-secret"></i><br>self</a>
+                <a class=" btn btn-outline-secondary  mx-2" href="self.html"><i class="fas fa-user-secret"></i><br>self</a>
                     <a class="btn btn-outline-secondary  mx-2" href="home.html"><i class="fas fa-user-secret"></i><br>Home</a>
-                    <a class="btn btn-outline-secondary active mx-2" href="smart.html"><i class="fas fa-user-secret"></i><br>Special</a>
+                    <a class="btn btn-outline-secondary active mx-2" href="#"><i class="fas fa-user-secret"></i><br>Special</a>
         </div> 
     </div>
     <div class="container banner my-3">
@@ -328,7 +327,6 @@
     </div>
     
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../assets/js/darkmode.min.js"></script>
     <script src="../assets/js/counter.js"></script>  
     <script src="../assets/js/jquery-3.5.1.slim.min.js"></script>
