--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
             </button> <!--pengatur toggle nya-->
             <div class="collapse navbar-collapse mt-2 " id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <form class="form-row flex-nowrap my-2 my-lg-0">
-                        <div class="col-sm-8 col-md-9 col-lg-10">
-                            <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search" />
+                    <form class="form-inline flex-nowrap my-2 my-lg-0 my-2 my-lg-0">
+                        <div class="col-sm-5 col-md-3 col-lg-10 ml-md-n3 ml-n3 ml-lg-0 col-search">
+                          <input class="form-control search rounded-pill mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                         </div>
-                        <div class="col-auto">
-                            <button class="btn rounded-circle my-2 my-sm-0" type="submit">
-                                <i class="fas fa-search text-black-50"></i>
-                            </button>
+                        <div class="col-auto ml-md-n3">
+                          <button class="btn my-2 my-sm-0" type="submit">
+                            <i class="fa fa-search"></i>
+                          </button>
                         </div>
-                    </form>
-                    <li class="nav-item mx-2 active">
+                          
+                      </form>
+                    <li class="nav-item active">
                         <a class="nav-link link  text-primary active" href="index.html">Home </a>
                     </li>
                     <li class="nav-item">
@@ -48,14 +49,14 @@
                     <li class="nav-item">
                         <a class="nav-link link  text-primary" href="#">News</a>
                     </li>
-                    <li class="nav-item nav-btn">
+                    <li class="nav-item">
                         <a class="nav-link  btn  btn-primary text-white tombol px-3" href="login.html">LOGIN</a>
                     </li>
                     <li class="nav-item text-white">
                         <a class="nav-link mx-2 js-scroll-trigger">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="switchDark">
-                                <label class="custom-control-label" for="switchDark">Dark mode</label>
+                                <label class="custom-control-label" for="switchDark"></label>
                             </div>
                         </a>
                     </li>
@@ -70,7 +71,7 @@
 
     <div class="jumbotron jumbotron-fluid text-center">
         <div class="container" style="margin-top: 150px;">
-            <h1>Lets Join Us</h1>
+            <h1>Let's Join Us</h1>
             <a href="#" class="text-decoration-none">JOIN</a>
         </div>
     </div>
@@ -361,6 +362,7 @@
             </div>
         </div>
     </div>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <script src="assets/js/scrollNavbar.js"></script>
     <script src="assets/js/darkmode.min.js"></script>
     <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
