--- a/produk/self.html
+++ b/produk/self.html
@@ -21,16 +21,17 @@
         </button> <!--pengatur toggle nya-->
         <div class="collapse navbar-collapse mt-2 " id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <form class="form-row flex-nowrap my-2 my-lg-0">
-                    <div class="col-sm-8 col-md-9 col-lg-10">
-                        <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search" />
+                <form class="form-inline flex-nowrap my-2 my-lg-0 my-2 my-lg-0">
+                    <div class="col-sm-5 col-md-3 col-lg-10 ml-md-n3 ml-n3 ml-lg-0 col-search">
+                      <input class="form-control search rounded-pill mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     </div>
-                    <div class="col-auto">
-                        <button class="btn rounded-circle my-2 my-sm-0" type="submit">
-                            <i class="fas fa-search text-black-50"></i>
-                        </button>
+                    <div class="col-auto ml-md-n3">
+                      <button class="btn my-2 my-sm-0" type="submit">
+                        <i class="fa fa-search"></i>
+                      </button>
                     </div>
-                </form>
+                      
+                  </form>
                 <li class="nav-item active">
                     <a class="nav-link link  text-primary active" href="../index.html">Home </a>
                 </li>
@@ -56,7 +57,7 @@
                     <a class="nav-link">
                         <div class="custom-control custom-switch">
                             <input type="checkbox" class="custom-control-input" id="switchDark">
-                            <label class="custom-control-label" for="switchDark">Dark mode</label>
+                            <label class="custom-control-label" for="switchDark"></label>
                         </div>
                     </a>
                 </li>
