--- a/about.html
+++ b/about.html
@@ -19,12 +19,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button> <!--pengatur toggle nya-->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <form class="form-inline  ml-md-5  mt-md-2">
-                    <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn rounded-circle my-2 my-sm-0" type="submit">
-                                <i class="fas fa-search text-black-50"></i>
-                            </button>
-                </form>
+                <form class="form-inline flex-nowrap my-2 my-lg-0 my-2 my-lg-0">
+                    <div class="col-sm-5 col-md-3 col-lg-10 ml-md-n3 ml-n3 ml-lg-0 col-search">
+                      <input class="form-control search rounded-pill mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    </div>
+                    <div class="col-auto ml-md-n3">
+                      <button class="btn my-2 my-sm-0" type="submit">
+                        <i class="fa fa-search"></i>
+                      </button>
+                    </div>
+                      
+                  </form>
                 <ul class="navbar-nav mx-auto mt-md-2">
                     <li class="nav-item mx-2 active">
                         <a class="nav-link link  text-primary active" href="index.html">Home </a>
@@ -129,7 +134,7 @@
         </section>
         
         <section class="leader-contain my-5">
-          <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col text-center">
                     <h1>Leader</h1>
